Upgraded to wicket-9.0.0-M4; #314